# ezer-cli

./: Cargo.toml  DEUDA_TECNICA.md  LICENSE  README.md  build.rs
examples/: 01_dashboard_metricas.rs  02_monitor_sla.rs  03_exportador_datos.rs  04_reportes_programados.rs  05_hub_integraciones.rs  06_gestor_tickets.rs  07_formulario_contacto.rs  08_buscador_avanzado.rs  09_chatbot_inteligente.rs  10_sistema_encuestas.rs  11_gestor_conocimiento.rs  12_monitor_chat.rs  13_admin_workflows.rs  14_gestor_cupones.rs  15_dashboard_agentes.rs  16_reporte_satisfaccion.rs  17_integracion_email.rs  18_gestor_notificaciones.rs  19_monitor_rendimiento.rs  20_panel_configuracion.rs  21_monitor_red_snmp.rs  22_receptor_traps_snmp.rs  23_bot_telegram_soporte.rs  23_bridge_integration_snmp.rs  24_notificador_telegram.rs  25_generador_facturas.rs  26_portal_clientes.rs  27_api_integration_hub.rs  28_integracion_phone_sms.rs  29_inventario_custom.rs  30_integracion_phone_call.rs  31_integracion_whatsapp_bridge.rs  32_whatsapp_chat_conversacional.rs  33_twilio_whatsapp_oficial.rs  34_meta_whatsapp_oficial.rs  README.md
src/: dev.html  main.rs
