[package]
name = "ezer"
version = "0.1.3"
edition = "2024"
authors = ["Jorge <jorge@rfjsoftware.com>"]
description = "Official CLI tool for scaffolding and building WebAssembly plugins for Ezerdesk."
license = "Apache-2.0"
repository = "https://github.com/jorgehc1/ezer-cli"
keywords = ["cli", "ezerdesk", "plugin", "wasm"]
categories = ["command-line-utilities", "wasm"]
homepage = "https://rfjsoftware.com"
readme = "README.md"

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
clap = { version = "4.6.1", features = ["derive"] }
console = "0.16.3"
ed25519-dalek = "2.1"
hex = "0.4"
indicatif = "0.18.4"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json", "cookies"] }
rpassword = "7.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10"
tiny_http = "0.12"
wasm-opt = { version = "0.116", default-features = false }
toml = "1.1.2"
webbrowser = "1.0"
zeroize = { version = "1", features = ["zeroize_derive"] }

[build-dependencies]
toml = "1.1.2"
